--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,11 +51,12 @@ jobs:
           name: allure-report
           path: allure-report
 
-      - name: Deploy Allure report to GitHub Pages
+      - name: Deploy Allure report to gh-pages
+        if: always() && github.event_name == 'push'
         uses: peaceiris/actions-gh-pages@v4
-        if: always()
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
           publish_dir: allure-report
           destination_dir: allure-reports
+          keep_files: true
